--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
 
         <div class="resultDisplay col-9">
             <div id="weather"></div>
+                <h2>Current Weather</h2>
+                <p id="current-temp"></p>
+                <p id="sunrise"></p>
+                <p id="sunset"></p>
+                
 
             <!---Current Temp Box-->
 
